@@ -1,5 +1,8 @@
 /edit/: 2.8.8257
 /state/: Max Score = 585, Eg Score = 100
+
+Room Table
+──────────
 /rooms/: rdesc2 base = #1995
 190 of 200 rooms { desc1, exit, actio, val, flag; }
 { #1613,   1,  0,  5, 0x2000 },
@@ -192,6 +195,9 @@
 { #1991, 850,  0,  0, 0x6000 },
 { -----, 855, 59,  0, 0x6000 },
 { -----, 859, 60,  0, 0x6000 },
+
+Exit Table
+──────────
 /exits/: 886 of 900 exits { travel; }
  12<<8| 83,
  28<<8| 10,
@@ -1079,6 +1085,9 @@
   0<<8|  0,
  14<<8| 32,
   0<<8|  0,
+
+Object Table
+────────────
 /objcts/: 216 of 220 objects { desc1, desc2, desco, actio, flag1, flag2, fval, tval, size, capac, room, adv, can, read; }
 { #2185, #2303, #2514,   0, 0xa090, 0x0000,  0,  0,     3,    15,     6, 0,   0, ----- },
 { #2186, #2304, -----,   0, 0xa400, 0x0000,  0,  0,     5,     0,     0, 0,   1, ----- },
@@ -1297,6 +1306,9 @@
 { #2302, #2512, -----, 128, 0x8020, 0x2400,  0,  0,     0,     0,   178, 0,   0, ----- },
 { -----, #2513, -----, 131, 0x8200, 0x0000,  0,  0,     0,     0,     0, 0,   0, ----- },
 /state/ bloc: 126 = oroom[98]
+
+Room 2 Table
+────────────
 /oroom2/: 15 of 20 room2 slots { o, r; }
 {  63,   6 },
 {  65,  36 },
@@ -1313,6 +1325,9 @@
 { 174, 186 },
 { 175, 184 },
 { 189, 189 },
+
+Clock Table
+───────────
 /cevent/: 24 of 25 clock events { tick, actio, flag; }
 {   0,  1, false },
 {   0,  2,  true },
@@ -1338,15 +1353,24 @@
 {   0, 22,  true },
 {   0, 23,  true },
 {   0, 24, false },
+
+Villain Table
+─────────────
 /vill/: 3 of 4 villains { villns, prob, opps, best, melee; }
 { 19, 0, 0, 14, 4 },
 { 61, 0, 0, 13, 5 },
 { 58, 0, 0,  0, 3 },
+
+Adventurer Table
+────────────────
 /advs/: 3 of 4 adventurers { room, score, vehic, obj, actio, stren, flag; }
 {   2, 0, 0, 193, 0, 0, 0x00 },
 { 138, 0, 0, 142, 1, 3, 0x00 },
 { 178, 0, 0, 215, 2, 3, 0x00 },
 /star/: Star Mask = 191, Melee Start = 885
+
+Message Table
+─────────────
 /rmsg/: 1818 of 1820 messages { text; }
 #0001,
 #0002,
